--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"@nuxt/eslint": "^1.9.0",
 		"@nuxt/ui": "^2.19.3",
 		"@nuxtjs/seo": "^3.2.2",
+		"lodash": "^4.17.21",
+		"lodash-es": "^4.17.21",
 		"nuxt": "^4.2.0",
 		"vue": "^3.5.22",
 		"vue-router": "^4.6.3",
@@ -29,6 +31,7 @@
 		"eslint": "^9.37.0"
 	},
 	"devDependencies": {
+		"@types/lodash": "^4.17.7",
 		"@types/ws": "^8.5.13",
 		"concurrently": "^9.1.0",
 		"tsx": "^4.19.2",
